added linear regression

--- a/actions-js/Dockerfile
+++ b/actions-js/Dockerfile
@@ -5,6 +5,9 @@ RUN npm install @tensorflow/tfjs \
     @tensorflow/tfjs-node \
     @tensorflow-models/mobilenet \
     @tensorflow-models/coco-ssd \
+    @tensorflow-models/qna \
+    @tensorflow/tfjs-converter \
+    @tensorflow/tfjs-core \
     node-fetch \
     jpeg-js \
     mongodb \
@@ -12,4 +15,4 @@ RUN npm install @tensorflow/tfjs \
     openwhisk
 
 # Test that modules can be loaded
-RUN node -e "require('@tensorflow/tfjs'); require('@tensorflow/tfjs-node'); require('@tensorflow-models/mobilenet'); require('@tensorflow-models/coco-ssd'); require('mongodb'); require('openwhisk')"
+RUN node -e "require('@tensorflow/tfjs'); require('@tensorflow/tfjs-node'); require('@tensorflow/tfjs-converter'); require('@tensorflow/tfjs-core'); require('@tensorflow-models/mobilenet'); require('@tensorflow-models/coco-ssd'); require('@tensorflow-models/qna'); require('mongodb'); require('openwhisk')"
